# upassist-python

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: configuration.md  gen_ref_pages.py  index.md  installation.md
docs/reference/: index.md
docs/reference/client/: index.md
docs/reference/entities/heartbeat/: index.md
docs/reference/entities/logs/: index.md
docs/releases/: 0.0.6.md  0.0.7.md  0.0.8.md  index.md
upassist/: __init__.py  config.py  errors.py  version.py
upassist/client/: __init__.py  _async.py  _sync.py  abstract.py
upassist/entities/: __init__.py  base.py  heartbeat.py
upassist/entities/heartbeat/: __init__.py  heartbeat.py  schemas.py
upassist/entities/logs/: __init__.py  logs.py  schemas.py
upassist/schemas/: __init__.py  base.py
upassist/utils/: attributes.py  passwords.py
