[project]
name = "upassist"
version = "0.0.5"
authors = [
  { name="michael7nightingale", email="suslanchikmopl@gmail.com" },
]
description = "Official Upasist Cloud API python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-extra-types>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/upassist-cloud/upassist-python"
Issues = "https://github.com/upassist-cloud/upassist-python/issues"